src/index.css
body {
  margin: 0;
  padding: 0;
  font-family: sans-serif;
}

@font-face {
  font-family: 'Billionaire';
  src: local('BillionaireMediumGrunge'), url(./Fonts/BillionaireMediumGrunge.otf) format('opentype');
}

@font-face {
  font-family: 'Baskerville';
  src: local('Baskerville-Medium'), url(./Fonts/Baskerville-Medium.ttf) format('truetype');
}

.toptable td {
  margin: 10px
}

.innertable td {
  margin: 0px
}

